--- a/site-jogos/styles/header.css
+++ b/site-jogos/styles/header.css
@@ -15,22 +15,10 @@ footer {
   align-items: center;
 }
 
-footer>div>a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 1.2em;
-  padding: 20px;
-}
-
-footer>div>a:hover {
-  text-decoration: underline;
-}
-
 #header-img>img {
   max-height: 60px;
   width: 1005;
 }
-
 
 #header-buttons {
   display: flex;
@@ -54,6 +42,37 @@ footer>div>a:hover {
   background-color: #1b1b1b;
   cursor: pointer;
 }
+
+body {
+  background-color: rgb(195, 195, 195);
+}
+
+h1 {
+  text-align: center;
+}
+
+h1>strong {
+  color: rgb(243, 88, 41);
+}
+
+#sub-title {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+footer>div>a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.2em;
+  padding: 20px;
+}
+
+footer>div>a:hover {
+  text-decoration: underline;
+}
+
+
 
 @media(max-width:620px) {
 
